# record_etl

./: README.md  main.py  pyproject.toml  reader_base.py  reader_file.py  reader_http.py  record.py  writer_base.py  writer_database.py  writer_file.py
.github/workflows/: python-app.yml
data/input/: modified_dataset.json
data/output/: output_2024_02_12_05_41_46.jsonl
tests/: test_reader_file.py  test_record.py  test_writer_file.py
tests/data/: ten_items.json
